@@ -47,13 +47,12 @@ import org.apache.fineract.portfolio.calendar.exception.CalendarDateException;
 import org.apache.fineract.portfolio.calendar.exception.CalendarParameterUpdateNotSupportedException;
 import org.apache.fineract.portfolio.calendar.service.CalendarUtils;
 import org.apache.fineract.portfolio.common.domain.NthDayType;
-import org.apache.fineract.useradministration.domain.AppUser;
 import org.joda.time.LocalDate;
 import org.joda.time.LocalDateTime;
 
 @Entity
 @Table(name = "m_calendar")
-public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
+public class Calendar extends AbstractAuditableCustom {
 
     @Column(name = "title", length = 50, nullable = false)
     private String title;
@@ -640,7 +639,7 @@ public class Calendar extends AbstractAuditableCustom<AppUser, Long> {
     public void updateStartAndEndDate(final LocalDate startDate, final LocalDate endDate) {
 
         final CalendarFrequencyType frequencyType = CalendarUtils.getFrequency(this.recurrence);
-        final Integer interval = new Integer(CalendarUtils.getInterval(this.recurrence));
+        final Integer interval = Integer.valueOf(CalendarUtils.getInterval(this.recurrence));
         final String newRecurrence = Calendar.constructRecurrence(frequencyType, interval, startDate.getDayOfWeek(), null);
 
         this.recurrence = newRecurrence;
